<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flybo</string>
    <string name="menu_home">主页</string>
    <string name="menu_new">新建</string>
    <string name="menu_message">消息</string>
    <string name="menu_user">用户</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_login">授权</string>
    <string name="button_sso_login">SSO授权</string>
    <string name="button_loginmain">登陆</string>
    <string name="access_token_name">AccessToken : </string>
    <string name="access_token_value" />
    <string name="title_activity_wbauth">WBAuthActivity</string>
    <string name="title_activity_statuseslist">Flybo</string>
    <string name="title_activity_baidumap">百度地图</string>
    <string name="drawer_close">drawer_close</string>
    <string name="drawer_open">drawer_open</string>
    <string name="text_user_group">分组 : 全部</string>
    <string name="setting_preference_basesetting">基本设定</string>
    <string name="setting_preference_auto_refresh">首次进入页面自动加载</string>
    <string name="setting_preference_auto_load">到达底部自动加载更多</string>
    <string name="pre_title_save_counts">最多缓存的微博数</string>
    <string name="title_activity_preference_config">设置</string>
    <string name="action_settings">Settings</string>
    
    <string name="NoRouteToHostException">网络路由发生错误</string>
    <string name="NoSignalException">无法连接到网络，请检查网络配置</string>
    <string name="apn_is_wrong1_exit">取消</string>
    <string name="apn_is_wrong1_setnet">网络设置</string>

</resources>
