<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<!--     <item -->
<!--         android:id="@+id/menu_new" -->
<!--         android:orderInCategory="100" -->
<!--         android:showAsAction="ifRoom" -->
<!--         android:icon="@drawable/draftbox_btn_new_weibo_normal" -->
<!--         android:title="@string/menu_new"/> -->
    
    <item
        android:id="@+id/menu_home"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/icon_1_n"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/menu_message"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/icon_2_n"
        android:title="@string/menu_message"/>
    <item
        android:id="@+id/menu_user"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/icon_3_n"
        android:title="@string/menu_user"/>

</menu>
